[gd_scene load_steps=10 format=3 uid="uid://by6ibt8eqsgjk"]

[ext_resource type="Script" uid="uid://jojeowbnx382" path="res://Scripts/ship_manager.gd" id="1_q5q4y"]
[ext_resource type="Texture2D" uid="uid://d0ara2tk00xts" path="res://Assets/Textures/back.png" id="2_qcah4"]
[ext_resource type="Texture2D" uid="uid://bgdt0cl5t2qt8" path="res://Assets/Textures/Ships/Ship_Base.png" id="3_ur7lb"]
[ext_resource type="PackedScene" uid="uid://d7h8318elmx6" path="res://Screens/Systems/Ship_Menu.tscn" id="4_fwxua"]
[ext_resource type="PackedScene" uid="uid://dkl1ls4rou68o" path="res://Screens/Systems/Ship_AI.tscn" id="5_kpqe6"]
[ext_resource type="PackedScene" uid="uid://cxlti6bo41ija" path="res://Screens/Systems/Ship_Energy.tscn" id="6_3a267"]
[ext_resource type="PackedScene" uid="uid://dcbq55wkga8tk" path="res://Screens/Systems/Ship_LIDAR.tscn" id="7_mneo4"]
[ext_resource type="PackedScene" uid="uid://de68nawnmq5oj" path="res://Screens/Systems/Ship_Oxy.tscn" id="8_252ws"]
[ext_resource type="PackedScene" uid="uid://cc5hivvk8lrs3" path="res://Screens/Systems/Ship_Weapons.tscn" id="9_hkh0f"]

[node name="ShipManager" type="Node2D"]
script = ExtResource("1_q5q4y")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(96, 54)
texture = ExtResource("2_qcah4")

[node name="ShipSprite" type="Sprite2D" parent="."]
position = Vector2(1328, 487)
texture = ExtResource("3_ur7lb")

[node name="ShipMenu" parent="." instance=ExtResource("4_fwxua")]

[node name="ShipAI" parent="." instance=ExtResource("5_kpqe6")]

[node name="ShipEnergy" parent="." instance=ExtResource("6_3a267")]

[node name="ShipLIDAR" parent="." instance=ExtResource("7_mneo4")]

[node name="ShipOxy" parent="." instance=ExtResource("8_252ws")]

[node name="ShipWeapons" parent="." instance=ExtResource("9_hkh0f")]
